# transmission

./: .clang-format  .clang-format-ignore  .clang-format-include  .gitattributes  .gitignore  .gitmodules  .jsbeautifyrc  .travis.yml  AUTHORS  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  CTGradientAdditions.h  CTGradientAdditions.m  FileListNode.m  FilterButton.m  Jamfile  Jamrules  LICENSE  Makefile  Makefile.am  Makefile.common  MessageWindowController.h  MessageWindowController.m  NEWS  NEWS.md  PiecesView.h  PiecesView.m  PiecesWindowController.h  PiecesWindowController.m  README  README.md  TODO.md  acinclude.m4  aclocal.m4  appcast.xml  appveyor.yml  autogen.sh  cmakeFindSFL.cmake  (+17 more)
2.0x/cli/: Makefile.am
2.0x/daemon/: Makefile.am  remote.c  transmission-remote.1  watch.c  watch.h
beos/: Makefile  Makefile.am  TRApplication.cpp  TRApplication.h  TRInfoWindow.cpp  TRInfoWindow.h  TRPrefsWindow.cpp  TRPrefsWindow.h  TRTransfer.cpp  TRTransfer.h  TRWindow.cpp  TRWindow.h  Transmission.rsrc  makefile
beos/libPrefs/: Prefs.h
cli/: CMakeLists.txt  Makefile  Makefile.am  cli.c  cli.cc  transmission-cli.1  transmissioncli.1  transmissioncli.c
daemon/: CMakeLists.txt  Makefile.am  bsdqueue.h  bsdtree.h  client.c  client.h  daemon-posix.c  daemon-posix.cc  daemon-win32.c  daemon-win32.cc  daemon.c  daemon.cc  daemon.h  errors.c  errors.h  getopts.c  getopts.h  ipc.c  ipc.h  ipcproto.txt  misc.c  misc.h  my-valgrind.sh  proxy.c  remote.c  server.c  server.h  settings.json  torrents.c  torrents.h  transmission-daemon-user.service  transmission-daemon.1  transmission-daemon.service  transmission-daemon.service.in  transmission-proxy.1  transmission-remote.1  watch.c  watch.h
fuzz/: CMakeLists.txt  README.md  fuzz-magnet.cc  fuzz-torrent.cc
gtk/: .clang-format  .clang-tidy  .gitignore  Actions.cc  Actions.h  Application.cc  Application.h  CMakeLists.txt  DetailsDialog.cc  DetailsDialog.h  Dialogs.cc  Dialogs.h  DynamicPropertyStore.h  EditTrackersDialog.ui  FaviconCache.cc  FaviconCache.h  FileList.cc  FileList.h  FilterBar.cc  FilterBar.h  FilterBar.ui  FilterBase.h  FilterBase.hh  FilterListModel.h  FilterListModel.hh  Flags.h  FreeSpaceLabel.cc  FreeSpaceLabel.h  GtkCompat.h  HigWorkarea.cc  HigWorkarea.h  IPToLocation.cc  IPToLocation.h  IconCache.cc  IconCache.h  Jamfile  ListModelAdapter.cc  ListModelAdapter.h  MainWindow.cc  MainWindow.h  (+194 more)
libtransmission/: .clang-tidy  .completion.cc.swp  .completion.h.swp  CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  JSON_checker.c  JSON_checker.h  JSON_parser.c  JSON_parser.h  Jamfile  Makefile  Makefile.am  README.md  announce-list.cc  announce-list.h  announcer-common.h  announcer-http.c  announcer-http.cc  announcer-udp.c  announcer-udp.cc  announcer.c  announcer.cc  announcer.h  api-compat.cc  api-compat.h  bandwidth.c  bandwidth.cc  bandwidth.h  basename.c  benc.h  benc2php.c  bencode-test.c  bencode.c  bencode.h  bep55-holepunch.cc  bep55-holepunch.h  bep55-introducer-store.h  bitfield-test.c  bitfield-test.cc  (+443 more)
libtransmission-app/: .clang-tidy  CMakeLists.txt  app.cc  app.h  converters.cc  converters.h  display-modes.h  favicon-cache.h
macosx/: .swiftlint.yml  AboutWindow.xib  AboutWindowController.h  AboutWindowController.m  AboutWindowController.mm  AboutWindowController.swift  ActionMenuRatioToDisplayRatioTransformer.h  ActionMenuRatioToDisplayRatioTransformer.m  ActionMenuSpeedToDisplayLimitTransformer.h  ActionMenuSpeedToDisplayLimitTransformer.m  ActionPopUpButton.h  ActionPopUpButton.m  ActionPopUpButtonCell.h  ActionPopUpButtonCell.m  AddMagnetWindowController.h  AddMagnetWindowController.m  AddMagnetWindowController.mm  AddWindowController.h  AddWindowController.m  AddWindowController.mm  Array+Additions.swift  BadgeView.h  BadgeView.m  BadgeView.mm  BadgeView.swift  Badger.h  Badger.m  Badger.mm  BarButton.h  BarButton.m  BaseFileNameCellView.h  BaseFileNameCellView.mm  BezierPathAdditions.h  BezierPathAdditions.m  BlocklistDownloader.h  BlocklistDownloader.m  BlocklistDownloader.mm  BlocklistDownloader.swift  BlocklistDownloaderViewController.h  BlocklistDownloaderViewController.m  (+375 more)
po/: CMakeLists.txt  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bo.po  br.po  bs.po  build-pot.sh  ca.po  ca@valencia.po  ceb.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  (+63 more)
qt/: .clang-tidy  AboutDialog.cc  AboutDialog.h  AboutDialog.ui  AccessibleSqueezeLabel.cc  AccessibleSqueezeLabel.h  AddData.cc  AddData.h  Application.cc  Application.h  BaseDialog.h  CMakeLists.txt  ColumnResizer.cc  ColumnResizer.h  ComInteropHelper.cc  ComInteropHelper.h  CustomVariantType.h  DBusAdaptor.cc  DBusAdaptor.h  DBusInteropHelper.cc  DBusInteropHelper.h  DetailsDialog.cc  DetailsDialog.cc.orig  DetailsDialog.h  DetailsDialog.ui  FaviconCache.cc  FaviconCache.h  FileTreeDelegate.cc  FileTreeDelegate.h  FileTreeItem.cc  FileTreeItem.h  FileTreeModel.cc  FileTreeModel.h  FileTreeView.cc  FileTreeView.h  FilterBar.cc  FilterBar.h  FilterBarComboBox.cc  FilterBarComboBox.h  FilterBarComboBoxDelegate.cc  (+213 more)
tests/: CMakeLists.txt  Makefile.am
utils/: CMakeLists.txt  Makefile.am  create.c  create.cc  edit.c  edit.cc  main.c  remote.c  remote.cc  show.c  show.cc  tools.h  transmission-create.1  transmission-edit.1  transmission-remote.1  transmission-show.1  units.h
web/: .eslintrc.cjs  .eslintrc.js  .gitattributes  .pnp.cjs  .prettierignore  CMakeLists.txt  Makefile.am  README  README.md  TODO.md  babel.config.js  esbuild.mjs  eslint.config.js  generate-buildonly.js  index.html  package-lock.json  package.json  package.json.buildonly  playwright.config.js  postcss.config.js  prettier.config.js  stylelint.config.js  transmission-app.scss  webpack.config.js
wx/: Makefile.am  README.txt  TODO.txt  filter.cc  filter.h  foreach.h  speed-stats.cc  speed-stats.h  torrent-filter.cc  torrent-filter.h  torrent-list.cc  torrent-list.h  torrent-stats.cc  torrent-stats.h  xmission.cc
(+2608 files in other folders)
